Fixes for the 7" eInk pdf build

--- a/tex/p014.tex
+++ b/tex/p014.tex
@@ -63,7 +63,7 @@
 \vs p014 4:14 Havoners have both optional present and future unrevealed destinies. And there is a progression of native creatures that is peculiar to the central universe, a progression that involves neither ascent to Paradise nor penetration of the superuniverses. This progression to higher Havona status may be suggested as follows:
 \vs p014 4:15 \ublistelem{1.}\bibnobreakspace Experiential progress outward from the first to the seventh circuit.
 \vs p014 4:16 \ublistelem{2.}\bibnobreakspace Progress inward from the seventh to the first circuit.
-\vs p014 4:17 \ublistelem{3.}\bibnobreakspace Intracircuit progress --- progression within the worlds of a given circuit.
+\vs p014 4:17 \ublistelem{3.}\bibnobreakspace Intracircuit progress --- progression with\-in the worlds of a given circuit.
 \vs p014 4:18 \pc In addition to the Havona natives, the inhabitants of the central universe embrace numerous classes of pattern beings for various universe groups --- advisers, directors, and teachers of their kind and to their kind throughout creation. All beings in all universes are fashioned along the lines of some one order of pattern creature living on some one of the billion worlds of Havona. Even the mortals of time have their goal and ideals of creature existence on the outer circuits of these pattern spheres on high.
 \vs p014 4:19 Then there are those beings who have attained the Universal Father, and who are entitled to go and come, who are assigned here and there in the universes on missions of special service. And on every Havona world will be found the attainment candidates, those who have physically attained the central universe, but who have not yet achieved that spiritual development which will enable them to claim Paradise residence.
 \vs p014 4:20 The Infinite Spirit is represented on the Havona worlds by a host of personalities, beings of grace and glory, who administer the details of the intricate intellectual and spiritual affairs of the central universe. On these worlds of divine perfection they perform the work indigenous to the normal conduct of this vast creation and, in addition, carry on the manifold tasks of teaching, training, and ministering to the enormous numbers of ascendant creatures who have climbed to glory from the dark worlds of space.
