--- a/tex/p023.tex
+++ b/tex/p023.tex
@@ -30,7 +30,7 @@
 \vs p023 2:10 \pc These spirit messengers are in every sense interchangeable from one type of service to another; such transfers are constantly taking place. There are no separate orders of Solitary Messengers; they are spiritually alike and in every sense equal. While they are generally designated by number, they are known to the Infinite Spirit by personal names. They are known to the rest of us by the name or number designative of their current assignment.
 \vs p023 2:11 \ublistelem{1.}\bibnobreakspace \bibemph{Messengers of the Paradise Trinity.} I am not permitted to reveal much of the work of the group of messengers assigned to the Trinity. They are the trusted and secret servants of the Deities, and when entrusted with special messages which involve the unrevealed policies and future conduct of the Gods, they have never been known to divulge a secret or betray the confidence reposed in their order. And all this is related in this connection, not to appear boastful of their perfection, but rather to point out that the Deities can and do create \bibemph{perfect beings.}
 \vs p023 2:12 The confusion and turmoil of Urantia do not signify that the Paradise Rulers lack either interest or ability to manage affairs differently. The Creators are possessed of full power to make Urantia a veritable paradise, but such an Eden would not contribute to the development of those strong, noble, and experienced characters which the Gods are so surely forging out on your world between the anvils of necessity and the hammers of anguish. Your anxieties and sorrows, your trials and disappointments, are just as much a part of the divine plan on your sphere as are the exquisite perfection and infinite adaptation of all things to their supreme purpose on the worlds of the central and perfect universe.
-\vs p023 2:13 \ublistelem{2.}\bibnobreakspace \bibemph{Messengers of the Havona Circuits.} Throughout the ascendant career you will be vaguely, but increasingly, able to detect the presence of the Solitary Messengers, but not until you reach Havona will you recognize them unmistakably. The first of the messengers you will see face to face will be those of the Havona circuits.
+\vs p023 2:13 \ublistelem{2.}\bibnobreakspace \bibemph{Messengers of the Havona Circuits.}\tunemarkup{pgkoboaurahd}{\linebreak} Throughout the ascendant career you will be vaguely, but increasingly, able to detect the presence of the Solitary Messengers, but not until you reach Havona will you recognize them unmistakably. The first of the messengers you will see face to face will be those of the Havona circuits.
 \vs p023 2:14 Solitary Messengers enjoy special relations with the natives of the Havona worlds. These messengers, who are so functionally handicapped when associating with one another, can and do have a very close and personal communion with the Havona natives. But it is quite impossible to convey to human minds the supreme satisfactions consequent upon the contact of the minds of these divinely perfect beings with the spirits of such near\hyp{}transcendent personalities.
 \vs p023 2:15 \ublistelem{3.}\bibnobreakspace \bibemph{Messengers of the Superuniverses.} The Ancients of Days, those personalities of Trinity origin who preside over the destinies of the seven superuniverses, those trios of divine power and administrative wisdom, are bountifully supplied with Solitary Messengers. It is only through this order of messengers that the triune rulers of one superuniverse can directly and personally communicate with the rulers of another. Solitary Messengers are the only available type of spirit intelligence --- aside, possibly, from the Inspired Trinity Spirits --- that can be dispatched from the headquarters of one superuniverse directly to the headquarters of another. All other personalities must make such excursions by way of Havona and the executive worlds of the Master Spirits.
 \vs p023 2:16 There are some kinds of information which cannot be obtained either by Gravity Messengers, reflectivity, or broadcast. And when the Ancients of Days would certainly know these things, they must dispatch a Solitary Messenger to the source of knowledge. Long before the presence of life on Urantia the messenger now associated with me was assigned on a mission out of Uversa to the central universe --- was absent from the roll calls of Orvonton for almost 1,000,000 years but returned in due time with the desired information.
