--- a/tex/p025.tex
+++ b/tex/p025.tex
@@ -22,7 +22,7 @@
 \vs p025 1:2 \pc The Havona Servitals are the joint creative work of the Seven Master Spirits and their associates, the Seven Supreme Power Directors. This creative collaboration comes the nearest to being the pattern for the long list of reproductions of the dual order in the evolutionary universes, extending from the creation of a Bright and Morning Star by a Creator Son\hyp{}Creative Spirit liaison down to sex procreation on worlds like Urantia.
 \vs p025 1:3 The number of servitals is prodigious, and more are being created all the time. They appear in groups of 1,000 on the 3\ts{rd} moment following the assembly of the Master Spirits and the Supreme Power Directors at their joint area in the far northerly sector of Paradise. Every 4\ts{th} servital is more physical in type than the others; that is, out of each 1,000, 750 are apparently true to spirit type, but 250 are semiphysical in nature. These \bibemph{4\ts{th} creatures} are somewhat on the order of material beings (material in the Havona sense), resembling the physical power directors more than the Master Spirits.
 \vs p025 1:4 \pc In personality relationships the spiritual is dominant over the material, even though it does not now so appear on Urantia; and in the production of Havona Servitals the law of spirit dominance prevails; the established ratio yields three spiritual beings to one semiphysical.
-\vs p025 1:5 \pc The newly created servitals, together with newly appearing Graduate Guides, all pass through the courses of training which the senior guides continuously conduct on each of the seven Havona circuits. Servitals are then assigned to the activities for which they are best adapted, and since they are of two types --- spiritual and semiphysical --- there are few limits to the range of work these versatile beings can do. The higher or spirit groups are assigned selectively to the services of the Father, the Son, and the Spirit, and to the work of the Seven Master Spirits. In large numbers they are dispatched, from time to time, to serve on the study worlds encircling the headquarters spheres of the seven superuniverses, the worlds devoted to the final training and spiritual culture of the ascending souls of time who are preparing for advancement to the circuits of Havona. Both spirit servitals and their more physical fellows are also designated assistants and associates of the Graduate Guides in helping and instructing the various orders of ascending creatures who have attained Havona, and who seek to attain Paradise.
+\vs p025 1:5 \pc The newly created servitals, together with newly appearing Graduate Guides, all pass\tunemarkup{pgkoboaurahd}{\linebreak} through the courses of training which the senior guides continuously conduct on each of the seven Havona circuits. Servitals are then assigned to the activities for which they are best adapted, and since they are of two types --- spiritual and semiphysical --- there are few limits to the range of work these versatile beings can do. The higher or spirit groups are assigned selectively to the services of the Father, the Son, and the Spirit, and to the work of the Seven Master Spirits. In large numbers they are dispatched, from time to time, to serve on the study worlds encircling the headquarters spheres of the seven superuniverses, the worlds devoted to the final training and spiritual culture of the ascending souls of time who are preparing for advancement to the circuits of Havona. Both spirit servitals and their more physical fellows are also designated assistants and associates of the Graduate Guides in helping and instructing the various orders of ascending creatures who have attained Havona, and who seek to attain Paradise.
 \vs p025 1:6 The Havona Servitals and the Graduate Guides manifest a transcendent devotion to their work and a touching affection for one another, an affection which, while spiritual, you could only understand by comparison with the phenomenon of human love. There is divine pathos in the separation of the servitals from the guides, as so often occurs when the servitals are dispatched on missions beyond the limits of the central universe; but they go with joy and not with sorrow. The satisfying joy of high duty is the eclipsing emotion of spiritual beings. Sorrow cannot exist in the face of the consciousness of divine duty faithfully performed. And when man’s ascending soul stands before the Supreme Judge, the decision of eternal import will not be determined by material successes or quantitative achievements; the verdict reverberating through the high courts declares: “Well done, good and \bibemph{faithful} servant; you have been faithful over a few essentials; you shall be made ruler over universe realities.”
 \vs p025 1:7 On superuniverse service the Havona Servitals are always assigned to that domain presided over by the Master Spirit whom they most resemble in general and special spirit prerogatives. They serve only on the educational worlds surrounding the capitals of the seven superuniverses, and the last report of Uversa indicates that almost 138 billion servitals were ministering on its 490 satellites. They engage in an endless variety of activities in connection with the work of these educational worlds comprising the superuniversities of the superuniverse of Orvonton. Here they are your companions; they have come down from your next career to study you and to inspire you with the reality and certainty of your eventual graduation from the universes of time to the realms of eternity. And in these contacts the servitals gain that preliminary experience of ministering to the ascending creatures of time which is so helpful in their subsequent work on the Havona circuits as associates of the Graduate Guides or --- as translated servitals --- as Graduate Guides themselves.
 \usection{The Universal Conciliators}
