--- a/tex/p029.tex
+++ b/tex/p029.tex
@@ -42,7 +42,7 @@
 \vs p029 2:18 \ublistelem{6.}\bibnobreakspace \bibemph{System Centres.} One Supreme Power Centre is permanently assigned to each local system. These system centres dispatch the power circuits to the inhabited worlds of time and space. They co\hyp{}ordinate the activities of the subordinate physical controllers and otherwise function to ensure the satisfactory distribution of power in the local system. The circuit relay between the planets depends upon the perfect co\hyp{}ordination of certain material energies and upon the efficient regulation of physical power.
 \vs p029 2:19 \ublistelem{7.}\bibnobreakspace \bibemph{Unclassified Centres.} These are the centres who function in special local situations but not on the inhabited planets. The individual worlds are in the charge of Master Physical Controllers and receive the encircuited lines of power dispatched by the power centre of their system. Only those spheres of the most extraordinary energy relationships have power centres of the 7\ts{th} order acting as universe balance wheels or energy governors. In every phase of activity these power centres are the full equals of those who function on the higher units of control, but not 1 space body in 1,000,000 harbours such a living power organization.
 \usection{The Domain of Power Centres}
-\vs p029 3:1 The Supreme Power Centres distributed throughout the superuniverses number, with their associates and subordinates, upward of $10^{10}$. And they are all in perfect synchrony and complete liaison with their Paradise progenitors, the Seven Supreme Power Directors. The power control of the grand universe is thus entrusted to the keeping and direction of the Seven Master Spirits, the creators of the Seven Supreme Power Directors.
+\vs p029 3:1 The Supreme Power Centres distributed\tunemarkup{pgkoboaurahd}{\linebreak} throughout the superuniverses number, with their associates and subordinates, upward of ten billion. And they are all in perfect synchrony and complete liaison with their Paradise progenitors, the Seven Supreme Power Directors. The power control of the grand universe is thus entrusted to the keeping and direction of the Seven Master Spirits, the creators of the Seven Supreme Power Directors.
 \vs p029 3:2 The Supreme Power Directors and all their associates, assistants, and subordinates are forever exempt from apprehension or interference by all the tribunals of all space; neither are they subject to the administrative direction either of the superuniverse government of the Ancients of Days or of the local universe administration of the Creator Sons.
 \vs p029 3:3 These power centres and directors are brought into being by the children of the Infinite Spirit. They are not germane to the administration of the Sons of God, though they affiliate with the Creator Sons during the later epochs of universe material organization. But the power centres are in some way closely associated with the cosmic overcontrol of the Supreme Being.
 \vs p029 3:4 \pc Power centres and physical controllers undergo no training; they are all created in perfection and are inherently perfect in action. Never do they pass from one function to another; always do they serve as originally assigned. There is no evolution in their ranks, and this is true of all seven divisions of both orders.
@@ -56,7 +56,7 @@
 \vs p029 3:12 These living power mechanisms are not consciously related to the master universe energy overcontrol of the Unqualified Absolute, but we surmise that their entire and almost perfect scheme of power direction is in some unknown manner subordinated to this supergravity presence. In any local energy situation the centres and controllers exert near\hyp{}supremacy, but they are always conscious of the superenergy presence and the unrecognizable performance of the Unqualified Absolute.
 \usection{The Master Physical Controllers}
 \vs p029 4:1 These beings are the mobile subordinates of the Supreme Power Centres. The physical controllers are endowed with capabilities of individuality metamorphosis of such a nature that they can engage in a remarkable variety of autotransport, being able to traverse local space at velocities approaching the flight of Solitary Messengers. But like all other space traversers they require the assistance of both their fellows and certain other types of beings in overcoming the action of gravity and the resistance of inertia in departing from a material sphere.
-\vs p029 4:2 The Master Physical Controllers serve throughout the grand universe. They are directly governed from Paradise by the Seven Supreme Power Directors as far as the headquarters of the superuniverses; from here they are directed and distributed by the Council of Equilibrium, the high commissioners of power dispatched by the Seven Master Spirits from the personnel of the Associate Master Force Organizers. These high commissioners are empowered to interpret the readings and registrations of the master frandalanks, those living instruments which indicate the power pressure and the energy charge of an entire superuniverse.
+\vs p029 4:2 The Master Physical Controllers serve\tunemarkup{pgkoboaurahd}{\linebreak} throughout the grand universe. They are directly governed from Paradise by the Seven Supreme Power Directors as far as the headquarters of the superuniverses; from here they are directed and distributed by the Council of Equilibrium, the high commissioners of power dispatched by the Seven Master Spirits from the personnel of the Associate Master Force Organizers. These high commissioners are empowered to interpret the readings and registrations of the master frandalanks, those living instruments which indicate the power pressure and the energy charge of an entire superuniverse.
 \vs p029 4:3 While the presence of the Paradise Deities encircles the grand universe and sweeps around the circle of eternity, the influence of any one of the Seven Master Spirits is limited to a single superuniverse. There is a distinct segregation of energy and a separation of the circuits of power between each of the seven supercreations; hence individualized control methods must and do prevail.
 \vs p029 4:4 \pc The Master Physical Controllers are the direct offspring of the Supreme Power Centres, and their numbers include the following:
 \vs p029 4:5 \ublistelem{1.}\bibnobreakspace Associate Power Directors.
