--- a/tex/p030.tex
+++ b/tex/p030.tex
@@ -129,7 +129,7 @@
 \vs p030 1:91 \ublistelem{21.}\bibnobreakspace The Morontia Power Supervisors.
 \end{quote}
 \vsetspace
-\vs p030 1:92 \ublistelem{IV.}\bibnobreakspace \bibemph{EVENTUATED TRANSCENDENTAL BEINGS.} There is to be found on Paradise a vast host of transcendental beings whose origin is not ordinarily disclosed to the universes of time and space until they are settled in light and life. These Transcendentalers are neither creators nor creatures; they are the \bibemph{eventuated} children of divinity, ultimacy, and eternity. These “eventuators” are neither finite nor infinite --- they are \bibemph{absonite;} and absonity is neither infinity nor absoluteness.
+\vs p030 1:92 \ublistelem{IV.}\bibnobreakspace\tunemarkup{pgkoboaurahd}{\kern-5pt} \bibemph{EVENTUATED TRANSCENDENTAL BEINGS.} There is to be found on Paradise a vast host of transcendental beings whose origin is not ordinarily disclosed to the universes of time and space until they are settled in light and life. These Transcendentalers are neither creators nor creatures; they are the \bibemph{eventuated} children of divinity, ultimacy, and eternity. These “eventuators” are neither finite nor infinite --- they are \bibemph{absonite;} and absonity is neither infinity nor absoluteness.
 \vs p030 1:93 These uncreated noncreators are ever loyal to the Paradise Trinity and obedient to the Ultimate. They are existent on 4 ultimate levels of personality activity and are functional on the 7 levels of the absonite in 12 grand divisions consisting of 1,000 major working groups of 7 classes each. These eventuated beings include the following orders:
 \vs p030 1:94 \ublistelem{1.}\bibnobreakspace The Architects of the Master Universe.
 \vs p030 1:95 \ublistelem{2.}\bibnobreakspace Transcendental Recorders.
@@ -144,7 +144,7 @@
 \vsetspace
 \vs p030 1:103 \ublistelem{VI.}\bibnobreakspace \bibemph{SUPERPERSONAL BEINGS.} There is a vast host of other\hyp{}than\hyp{}personal beings of divine origin and of manifold service in the universe of universes. Certain of these beings are resident on the Paradise worlds of the Son; others, like the superpersonal representatives of the Eternal Son, are encountered elsewhere. They are for the most part unmentioned in these narratives, and it would be quite futile to attempt their description to \bibemph{personal} creatures.
 \vsetspace
-\vs p030 1:104 \ublistelem{VII.}\bibnobreakspace \bibemph{UNCLASSIFIED AND UNREVEALED ORDERS.} During the present universe age it would not be possible to place all beings, personal or otherwise, within classifications pertaining to the present universe age; nor have all such categories been revealed in these narratives; hence numerous orders have been omitted from these lists. Consider the following:
+\vs p030 1:104 \ublistelem{VII.}\bibnobreakspace\tunemarkup{pgkoboaurahd}{\kern-5pt} \bibemph{UNCLASSIFIED AND UNREVEALED ORDERS.} During the present universe age it would not be possible to place all beings, personal or otherwise, within classifications pertaining to the present universe age; nor have all such categories been revealed in these narratives; hence numerous orders have been omitted from these lists. Consider the following:
 \begin{quote}
 \vs p030 1:105 The Consummator of Universe Destiny.
 \vs p030 1:106 The Qualified Vicegerents of the Ultimate.
@@ -242,7 +242,7 @@
 \vs p030 2:64 \ublistelem{10.}\bibnobreakspace Trinitized Sons of Destiny.
 \end{quote}
 \vsetspace
-\vs p030 2:65 \ublistelem{V.}\bibnobreakspace \bibemph{PERSONALITIES OF THE INFINITE SPIRIT.}
+\vs p030 2:65 \ublistelem{V.}\bibnobreakspace\tunemarkup{pgkoboaurahd}{\kern-5pt} \bibemph{PERSONALITIES OF THE INFINITE SPIRIT.}
 \vsetspace
 \vs p030 2:66 \ublistelem{A.}\bibnobreakspace \bibemph{Higher Personalities of the Infinite Spirit.}
 \begin{quote}
@@ -331,7 +331,7 @@
 \end{quote}
 \vs p030 2:129 \pc This is the working classification of the personalities of the universes as they are of record on the headquarters world of Uversa.
 \vsetspace
-\vs p030 2:130 \pc \bibemph{COMPOSITE PERSONALITY GROUPS.} There are on Uversa the records of numerous additional groups of intelligent beings, beings that are also closely related to the organization and administration of the grand universe. Among such orders are the following three composite personality groups:
+\vs p030 2:130 \pc\tunemarkup{pgkoboaurahd}{\kern-4pt} \bibemph{COMPOSITE PERSONALITY GROUPS.} There are on Uversa the records of numerous additional groups of intelligent beings, beings that are also closely related to the organization and administration of the grand universe. Among such orders are the following three composite personality groups:
 \vsetspace
 \vs p030 2:131 \ublistelem{A.}\bibnobreakspace \bibemph{The Paradise Corps of the Finality.}
 \begin{quote}
