--- a/tex/p055.tex
+++ b/tex/p055.tex
@@ -61,7 +61,7 @@
 \vs p055 3:14 \ublistelem{1.}\bibnobreakspace Young Material Sons and Daughters brought from the system headquarters to act as assistants to the ruling Adam and Eve.
 \vs p055 3:15 \ublistelem{2.}\bibnobreakspace The progeny of the semimortal staff of the Planetary Prince who were procreated on certain worlds for this and other similar responsibilities.
 \vs p055 3:16 \ublistelem{3.}\bibnobreakspace The direct planetary progeny of Adam and Eve.
-\vs p055 3:17 \ublistelem{4.}\bibnobreakspace Materialized and humanized midway creatures.
+\vs p055 3:17 \ublistelem{4.}\bibnobreakspace Materialized and humanized midway\tunemarkup{pgkoboaurahd}{\linebreak} creatures.
 \vs p055 3:18 \ublistelem{5.}\bibnobreakspace Mortals of Adjuster\hyp{}fusion status who, upon their own petition, are temporarily exempted from translation by the order of the Personalized Adjuster of universe chieftainship in order that they may continue on the planet in certain important administrative posts.
 \vs p055 3:19 \ublistelem{6.}\bibnobreakspace Specially trained mortals of the planetary schools of administration who have also received the order of supreme service of the morontia temple.
 \vs p055 3:20 \ublistelem{7.}\bibnobreakspace Certain elective commissions of three properly qualified citizens who are sometimes chosen by the citizenry by direction of the Planetary Sovereign in accordance with their special ability to accomplish some definite task which is needful in that particular planetary sector.
