--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -43,7 +43,7 @@
 \vs p057 4:4 \pc \bibemph{25,000,000,000} years ago witnessed the completion of the tertiary cycle of nebular life and brought about the organization and relative stabilization of the far\hyp{}flung starry systems derived from this parent nebula. But the process of physical contraction and increased heat production continued in the central mass of the nebular remnant.
 \vs p057 4:5 \pc \bibemph{10,000,000,000} years ago the quartan cycle of Andronover began. The maximum of nuclear\hyp{}mass temperature had been attained; the critical point of condensation was approaching. The original mother nucleus was convulsing under the combined pressure of its own internal\hyp{}heat condensation tension and the increasing gravity\hyp{}tidal pull of the surrounding swarm of liberated sun systems. The nuclear eruptions which were to inaugurate the second nebular sun cycle were imminent. The quartan cycle of nebular existence was about to begin.
 \vs p057 4:6 \pc \bibemph{8,000,000,000} years ago the terrific terminal eruption began. Only the outer systems are safe at the time of such a cosmic upheaval. And this was the beginning of the end of the nebula. This final sun disgorgement extended over a period of almost 2,000,000,000 years.
-\vs p057 4:7 \pc \bibemph{7,000,000,000} years ago witnessed the height of the Andronover terminal breakup. This was the period of the birth of the larger terminal suns and the apex of the local physical disturbances.
+\vs p057 4:7 \pc \bibemph{7,000,000,000} years ago witnessed the\tunemarkup{pgkoboaurahd}{\linebreak} height of the Andronover terminal breakup. This was the period of the birth of the larger terminal suns and the apex of the local physical disturbances.
 \vs p057 4:8 \pc \bibemph{6,000,000,000} years ago marks the end of the terminal breakup and the birth of your sun, the 56\ts{th} from the last of the Andronover second solar family. This final eruption of the nebular nucleus gave birth to 136,702 suns, most of them solitary orbs. The total number of suns and sun systems having origin in the Andronover nebula was 1,013,628. The number of the solar system sun is 1,013,572.
 \vs p057 4:9 And now the great Andronover nebula is no more, but it lives on in the many suns and their planetary families which originated in this mother cloud of space. The final nuclear remnant of this magnificent nebula still burns with a reddish glow and continues to give forth moderate light and heat to its remnant planetary family of 165 worlds, which now revolve about this venerable mother of two mighty generations of the monarchs of light.
 \usection{Origin of Monmatia --- The Urantia Solar System}
