--- a/tex/p072.tex
+++ b/tex/p072.tex
@@ -47,7 +47,7 @@
 \vs p072 3:5 All sex instruction is administered in the home by parents or by legal guardians. Moral instruction is offered by teachers during the rest periods in the school shops, but not so with religious training, which is deemed to be the exclusive privilege of parents, religion being looked upon as an integral part of home life. Purely religious instruction is given publicly only in the temples of philosophy, no such exclusively religious institutions as the Urantia churches having developed among this people. In their philosophy, religion is the striving to know God and to manifest love for one’s fellows through service for them, but this is not typical of the religious status of the other nations on this planet. Religion is so entirely a family matter among these people that there are no public places devoted exclusively to religious assembly. Politically, church and state, as Urantians are wont to say, are entirely separate, but there is a strange overlapping of religion and philosophy.
 \vs p072 3:6 Until 20 years ago the spiritual teachers (comparable to Urantia pastors), who visit each family periodically to examine the children to ascertain if they have been properly instructed by their parents, were under governmental supervision. These spiritual advisers and examiners are now under the direction of the newly created Foundation of Spiritual Progress, an institution supported by voluntary contributions. Possibly this institution may not further evolve until after the arrival of a Paradise Magisterial Son.
 \vs p072 3:7 \pc Children remain legally subject to their parents until they are 15, when the first initiation into civic responsibility is held. Thereafter, every 5 years for 5 successive periods similar public exercises are held for such age groups at which their obligations to parents are lessened, while new civic and social responsibilities to the state are assumed. Suffrage is conferred at 20, the right to marry without parental consent is not bestowed until 25, and children must leave home on reaching the age of 30.
-\vs p072 3:8 Marriage and divorce laws are uniform throughout the nation. Marriage before 20 --- the age of civil enfranchisement --- is not permitted. Permission to marry is only granted after one year’s notice of intention, and after both bride and groom present certificates showing that they have been duly instructed in the parental schools regarding the responsibilities of married life.
+\vs p072 3:8 Marriage and divorce laws are uniform\tunemarkup{pgkoboaurahd}{\linebreak} throughout the nation. Marriage before 20 --- the age of civil enfranchisement --- is not permitted. Permission to marry is only granted after one year’s notice of intention, and after both bride and groom present certificates showing that they have been duly instructed in the parental schools regarding the responsibilities of married life.
 \vs p072 3:9 Divorce regulations are somewhat lax, but decrees of separation, issued by the parental courts, may not be had until one year after application therefor has been recorded, and the year on this planet is considerably longer than on Urantia. Notwithstanding their easy divorce laws, the present rate of divorces is only \bibfrac{1}{10}\ts{th} that of the civilized races of Urantia.
 \usection{The Educational System}
 \vs p072 4:1 The educational system of this nation is compulsory and coeducational in the precollege schools that the student attends from the ages of 5 to 18. These schools are vastly different from those of Urantia. There are no classrooms, only one study is pursued at a time, and after the first 3 years all pupils become assistant teachers, instructing those below them. Books are used only to secure information that will assist in solving the problems arising in the school shops and on the school farms. Much of the furniture used on the continent and the many mechanical contrivances --- this is a great age of invention and mechanization --- are produced in these shops. Adjacent to each shop is a working library where the student may consult the necessary reference books. Agriculture and horticulture are also taught throughout the entire educational period on the extensive farms adjoining every local school.
