--- a/tex/p082.tex
+++ b/tex/p082.tex
@@ -38,7 +38,7 @@
 \vs p082 3:9 Among later peoples, puberty was the common age of marriage, but this has advanced in direct proportion to the progress of civilization. Early in social evolution peculiar and celibate orders of both men and women arose; they were started and maintained by individuals more or less lacking normal sex urge.
 \vs p082 3:10 Many tribes allowed members of the ruling group to have sex relations with the bride just before she was to be given to her husband. Each of these men would give the girl a present, and this was the origin of the custom of giving wedding presents. Among some groups it was expected that a young woman would earn her dowry, which consisted of the presents received in reward for her sex service in the bride’s exhibition hall.
 \vs p082 3:11 Some tribes married the young men to the widows and older women and then, when they were subsequently left widowers, would allow them to marry the young girls, thus ensuring, as they expressed it, that both parents would not be fools, as they conceived would be the case if two youths were allowed to mate. Other tribes limited mating to similar age groups. It was the limitation of marriage to certain age groups that first gave origin to ideas of incest. (In India there are even now no age restrictions on marriage.)
-\vs p082 3:12 \pc Under certain mores widowhood was greatly to be feared, widows being either killed or allowed to commit suicide on their husbands’ graves, for they were supposed to go over into spiritland with their spouses. The surviving widow was almost invariably blamed for her husband’s death. Some tribes burned them alive. If a widow continued to live, her life was one of continuous mourning and unbearable social restriction since remarriage was generally disapproved.
+\vs p082 3:12 \pc Under certain mores widowhood was great\-ly to be feared, widows being either killed or allowed to commit suicide on their husbands’ graves, for they were supposed to go over into spiritland with their spouses. The surviving widow was almost invariably blamed for her husband’s death. Some tribes burned them alive. If a widow continued to live, her life was one of continuous mourning and unbearable social restriction since remarriage was generally disapproved.
 \vs p082 3:13 In olden days many practices now regarded as immoral were encouraged. Primitive wives not infrequently took great pride in their husbands’ affairs with other women. Chastity in girls was a great hindrance to marriage; the bearing of a child before marriage greatly increased a girl’s desirability as a wife since the man was sure of having a fertile companion.
 \vs p082 3:14 Many primitive tribes sanctioned trial marriage until the woman became pregnant, when the regular marriage ceremony would be performed; among other groups the wedding was not celebrated until the first child was born. If a wife was barren, she had to be redeemed by her parents, and the marriage was annulled. The mores demanded that every pair have children.
 \vs p082 3:15 These primitive trial marriages were entirely free from all semblance of license; they were simply sincere tests of fecundity. The contracting individuals married permanently just as soon as fertility was established. When modern couples marry with the thought of convenient divorce in the background of their minds if they are not wholly pleased with their married life, they are in reality entering upon a form of trial marriage and one that is far beneath the status of the honest adventures of their less civilized ancestors.
