--- a/tex/p094.tex
+++ b/tex/p094.tex
@@ -38,7 +38,7 @@
 \vs p094 3:5 The karma principle of causality continuity is, again, very close to the truth of the repercussional synthesis of all time\hyp{}space actions in the Deity presence of the Supreme; but this postulate never provided for the co\hyp{}ordinate personal attainment of Deity by the individual religionist, only for the ultimate engulfment of all personality by the Universal Oversoul.
 \vs p094 3:6 The philosophy of Brahmanism also came very near to the realization of the indwelling of the Thought Adjusters, only to become perverted through the misconception of truth. The teaching that the soul is the indwelling of the Brahman would have paved the way for an advanced religion had not this concept been completely vitiated by the belief that there is no human individuality apart from this indwelling of the Universal One.
 \vs p094 3:7 In the doctrine of the merging of the self\hyp{}soul with the Oversoul, the theologians of India failed to provide for the survival of something human, something new and unique, something born of the union of the will of man and the will of God. The teaching of the soul’s return to the Brahman is closely parallel to the truth of the Adjuster’s return to the bosom of the Universal Father, but there is something distinct from the Adjuster which also survives, the morontial counterpart of mortal personality. And this vital concept was fatally absent from Brahmanic philosophy.
-\vs p094 3:8 Brahmanic philosophy has approximated many of the facts of the universe and has approached numerous cosmic truths, but it has all too often fallen victim to the error of failing to differentiate between the several levels of reality, such as absolute, transcendental, and finite. It has failed to take into account that what may be finite\hyp{}illusory on the absolute level may be absolutely real on the finite level. And it has also taken no cognizance of the essential personality of the Universal Father, who is personally contactable on all levels from the evolutionary creature’s limited experience with God on up to the limitless experience of the Eternal Son with the Paradise Father.
+\vs p094 3:8 Brahmanic philosophy has approximated\tunemarkup{pgkoboaurahd}{\linebreak} many of the facts of the universe and has approached numerous cosmic truths, but it has all too often fallen victim to the error of failing to differentiate between the several levels of reality, such as absolute, transcendental, and finite. It has failed to take into account that what may be finite\hyp{}illusory on the absolute level may be absolutely real on the finite level. And it has also taken no cognizance of the essential personality of the Universal Father, who is personally contactable on all levels from the evolutionary creature’s limited experience with God on up to the limitless experience of the Eternal Son with the Paradise Father.
 \usection{The Hindu Religion}
 \vs p094 4:1 With the passing of the centuries in India, the populace returned in measure to the ancient rituals of the Vedas as they had been modified by the teachings of the Melchizedek missionaries and crystallized by the later Brahman priesthood. This, the oldest and most cosmopolitan of the world’s religions, has undergone further changes in response to Buddhism and Jainism and to the later appearing influences of Mohammedanism and Christianity. But by the time the teachings of Jesus arrived, they had already become so Occidentalized as to be a “white man’s religion,” hence strange and foreign to the Hindu mind.
 \vs p094 4:2 \pc Hindu theology, at present, depicts four descending levels of deity and divinity:
@@ -46,7 +46,7 @@
 \vs p094 4:4 \ublistelem{2.}\bibnobreakspace \bibemph{The Trimurti,} the supreme trinity of Hinduism. In this association \bibemph{Brahma,} the first member, is conceived as being self\hyp{}created out of the Brahman --- infinity. Were it not for close identification with the pantheistic Infinite One, Brahma could constitute the foundation for a concept of the Universal Father. Brahma is also identified with fate.
 \vs p094 4:5 The worship of the second and third members, Siva and Vishnu, arose in the first millennium after Christ. \bibemph{Siva} is lord of life and death, god of fertility, and master of destruction. \bibemph{Vishnu} is extremely popular due to the belief that he periodically incarnates in human form. In this way, Vishnu becomes real and living in the imaginations of the Indians. Siva and Vishnu are each regarded by some as supreme over all.
 \vs p094 4:6 \ublistelem{3.}\bibnobreakspace \bibemph{Vedic and post\hyp{}Vedic deities.} Many of the ancient gods of the Aryans, such as Agni, Indra, and Soma, have persisted\fnc{\textbf{Agni, Indra, and Soma, have persisted}, In 1955 text: Agni, Indra, Soma, have persisted.} as secondary to the three members of the Trimurti. Numerous additional gods have arisen since the early days of Vedic India, and these have also been incorporated into the Hindu pantheon.
-\vs p094 4:7 \ublistelem{4.}\bibnobreakspace \bibemph{The demigods:} supermen, semigods, heroes, demons, ghosts, evil spirits, sprites, monsters, goblins, and saints of the later\hyp{}day cults.
+\vs p094 4:7 \ublistelem{4.}\bibnobreakspace \bibemph{The demigods:} supermen, semigods,\tunemarkup{pgkoboaurahd}{\linebreak} heroes, demons, ghosts, evil spirits, sprites, monsters, goblins, and saints of the later\hyp{}day cults.
 \vs p094 4:8 \pc While Hinduism has long failed to vivify the Indian people, at the same time it has usually been a tolerant religion. Its great strength lies in the fact that it has proved to be the most adaptive, amorphic religion to appear on Urantia. It is capable of almost unlimited change and possesses an unusual range of flexible adjustment from the high and semimonotheistic speculations of the intellectual Brahman to the arrant fetishism and primitive cult practices of the debased and depressed classes of ignorant believers.
 \vs p094 4:9 Hinduism has survived because it is essentially an integral part of the basic social fabric of India. It has no great hierarchy which can be disturbed or destroyed; it is interwoven into the life pattern of the people. It has an adaptability to changing conditions that excels all other cults, and it displays a tolerant attitude of adoption toward many other religions, Gautama Buddha and even Christ himself being claimed as incarnations of Vishnu.
 \vs p094 4:10 Today, in India, the great need is for the portrayal of the Jesusonian gospel --- the Fatherhood of God and the sonship and consequent brotherhood of all men, which is personally realized in loving ministry and social service. In India the philosophical framework is existent, the cult structure is present; all that is needed is the vitalizing spark of the dynamic love portrayed in the original gospel of the Son of Man, divested of the Occidental dogmas and doctrines which have tended to make Michael’s life bestowal a white man’s religion.
