--- a/tex/p107.tex
+++ b/tex/p107.tex
@@ -25,7 +25,7 @@
 \usection{Classification of Adjusters}
 \vs p107 2:1 Adjusters are individuated as virgin entities, and all are destined to become either liberated, fused, or Personalized Monitors. We understand that there are seven orders of Thought Adjusters, although we do not altogether comprehend these divisions. We often refer to the different orders as follows:
 \vs p107 2:2 \ublistelem{1.}\bibnobreakspace \bibemph{Virgin Adjusters,} those serving on their initial assignment in the minds of evolutionary candidates for eternal survival. Mystery Monitors are eternally uniform in divine nature. They are also uniform in experiential nature as they first go out from Divinington; subsequent experiential differentiation is the result of actual experience in universe ministry.
-\vs p107 2:3 \ublistelem{2.}\bibnobreakspace \bibemph{Advanced Adjusters,} those who have served one or more seasons with will creatures on worlds where the final fusion takes place between the identity of the creature of time and an individualized portion of the spirit of the local universe manifestation of the Third Source and Centre.
+\vs p107 2:3 \ublistelem{2.}\bibnobreakspace \bibemph{Advanced Adjusters,} those who have\tunemarkup{pgkoboaurahd}{\linebreak} served one or more seasons with will creatures on worlds where the final fusion takes place between the identity of the creature of time and an individualized portion of the spirit of the local universe manifestation of the Third Source and Centre.
 \vs p107 2:4 \ublistelem{3.}\bibnobreakspace \bibemph{Supreme Adjusters,} those Monitors that have served in the adventure of time on the evolutionary worlds, but whose human partners for some reason declined eternal survival, and those that have been subsequently assigned to other adventures in other mortals on other evolving worlds. A supreme Adjuster, though no more divine than a virgin Monitor, has had more experience, can do things in the human mind which a less experienced Adjuster could not do.
 \vs p107 2:5 \ublistelem{4.}\bibnobreakspace \bibemph{Vanished Adjusters.} Here occurs a break in our efforts to follow the careers of the Mystery Monitors. There is a fourth stage of service about which we are not sure. The Melchizedeks teach that the fourth\hyp{}stage Adjusters are on detached assignments, roaming the universe of universes. The Solitary Messengers are inclined to believe that they are at one with the First Source and Centre, enjoying a period of refreshing association with the Father himself. And it is entirely possible that an Adjuster could be roaming the master universe simultaneously with being at one with the omnipresent Father.
 \vs p107 2:6 \ublistelem{5.}\bibnobreakspace \bibemph{Liberated Adjusters,} those Mystery Monitors that have been eternally liberated from the service of time for the mortals of the evolving spheres. What functions may be theirs, we do not know.
