--- a/tex/p121.tex
+++ b/tex/p121.tex
@@ -51,7 +51,7 @@
 \vs p121 4:5 \ublistelem{4.}\bibnobreakspace \bibemph{The Sceptic.} Scepticism asserted that knowledge was fallacious, and that conviction and assurance were impossible. It was a purely negative attitude and never became widespread.
 \vs p121 4:6 \pc These philosophies were semireligious; they were often invigorating, ethical, and ennobling but were usually above the common people. With the possible exception of Cynicism, they were philosophies for the strong and the wise, not religions of salvation for even the poor and the weak.
 \usection{The Gentile Religions}
-\vs p121 5:1 Throughout preceding ages religion had chiefly been an affair of the tribe or nation; it had not often been a matter of concern to the individual. Gods were tribal or national, not personal. Such religious systems afforded little satisfaction for the individual spiritual longings of the average person.
+\vs p121 5:1 Throughout preceding ages religion had chief\-ly been an affair of the tribe or nation; it had not often been a matter of concern to the individual. Gods were tribal or national, not personal. Such religious systems afforded little satisfaction for the individual spiritual longings of the average person.
 \vs p121 5:2 In the times of Jesus the religions of the Occident included:
 \vs p121 5:3 \ublistelem{1.}\bibnobreakspace \bibemph{The pagan cults.} These were a combination of Hellenic and Latin mythology, patriotism, and tradition.
 \vs p121 5:4 \ublistelem{2.}\bibnobreakspace \bibemph{Emperor worship.} This deification of man as the symbol of the state was very seriously resented by the Jews and the early Christians and led directly to the bitter persecutions of both churches by the Roman government.
