--- a/tex/urantia-hyphen-en.tex
+++ b/tex/urantia-hyphen-en.tex
@@ -1,4 +1,20 @@
 \hyphenation{%
+oc-cur-rence
+oc-cur-rences
+arch-an-gel
+arch-an-gels
+phil-o-soph-i-cal-ly
+phil-o-soph-i-cal
+Bed-ou-in
+Bed-ou-ins
+pav-ing
+strip-ped
+em-a-na-tion
+em-a-na-tions
+en-se-ra-phimed
+as-tron-o-mer
+as-tron-o-mers
+aware-ness
 Na-ba-tae-ans
 friend-ly
 found-er
@@ -185,6 +201,7 @@ man-i-fes-ta-tion
 man-i-fes-ta-tions
 Phi-lis-tine
 Phi-lis-tines
+Ca-naan
 Ca-naan-ite
 Ca-naan-ites
 Mel-chi-ze-dek
