--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -19,7 +19,7 @@ INTRODUCTION
 \tunemarkup{pgnexus7}{\fontsize{15}{18}\selectfont}
 \tunemarkup{pgthinmob}{\fontsize{15}{18}\selectfont}
 \tunemarkup{pgnexus10}{\fontsize{17}{19}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{14}{18}\selectfont}
+\tunemarkup{pgkoboaurahd}{\bibbookend}
 \tunemarkup{pgauraone}{\fontsize{14}{18}\selectfont}
 \tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
 
