--- a/tex/p100.tex
+++ b/tex/p100.tex
@@ -16,7 +16,7 @@
 \vs p100 1:4 Children are permanently impressed only by the loyalties of their adult associates; precept or even example is not lastingly influential. Loyal persons are growing persons, and growth is an impressive and inspiring reality. Live loyally today --- grow --- and tomorrow will attend to itself. The quickest way for a tadpole to become a frog is to live loyally each moment as a tadpole.
 \vs p100 1:5 \pc The soil essential for religious growth presupposes a progressive life of self\hyp{}realization, the co\hyp{}ordination of natural propensities, the exercise of curiosity and the enjoyment of reasonable adventure, the experiencing of feelings of satisfaction, the functioning of the fear stimulus of attention and awareness, the wonder\hyp{}lure, and a normal consciousness of smallness, humility. Growth is also predicated on the discovery of selfhood accompanied by self\hyp{}criticism --- conscience, for conscience is really the criticism of oneself by one’s own value\hyp{}habits, personal ideals.
 \vs p100 1:6 \pc Religious experience is markedly influenced by physical health, inherited temperament, and social environment. But these temporal conditions do not inhibit inner spiritual progress by a soul dedicated to the doing of the will of the Father in heaven. There are present in all normal mortals certain innate drives toward growth and self\hyp{}realization which function if they are not specifically inhibited. The certain technique of fostering this constitutive endowment of the potential of spiritual growth is to maintain an attitude of wholehearted devotion to supreme values.
-\vs p100 1:7 Religion cannot be bestowed, received, loaned, learned, or lost. It is a personal experience which grows proportionally to the growing quest for final values. Cosmic growth thus attends on the accumulation of meanings and the ever\hyp{}expanding elevation of values. But nobility itself is always an unconscious growth.
+\vs p100 1:7 Religion cannot be bestowed, received,\tunemarkup{pgkoboaurahd}{\linebreak} loaned, learned, or lost. It is a personal experience which grows proportionally to the growing quest for final values. Cosmic growth thus attends on the accumulation of meanings and the ever\hyp{}expanding elevation of values. But nobility itself is always an unconscious growth.
 \vs p100 1:8 Religious habits of thinking and acting are contributory to the economy of spiritual growth. One can develop religious predispositions toward favourable reaction to spiritual stimuli, a sort of conditioned spiritual reflex. Habits which favour religious growth embrace cultivated sensitivity to divine values, recognition of religious living in others, reflective meditation on cosmic meanings, worshipful problem solving, sharing one’s spiritual life with one’s fellows, avoidance of selfishness, refusal to presume on divine mercy, living as in the presence of God. The factors of religious growth may be intentional, but the growth itself is unvaryingly unconscious.
 \vs p100 1:9 The unconscious nature of religious growth does not, however, signify that it is an activity functioning in the supposed subconscious realms of human intellect; rather does it signify creative activities in the superconscious levels of mortal mind. The experience of the realization of the reality of unconscious religious growth is the one positive proof of the functional existence of the superconsciousness.
 \usection{Spiritual Growth}
