--- a/tex/p123.tex
+++ b/tex/p123.tex
@@ -52,7 +52,7 @@
 \vs p123 4:1 This was, indeed, an eventful year in Jesus’ life. Early in January a great snowstorm occurred in Galilee. Snow fell 60\,cm deep, the heaviest snowfall Jesus saw during his lifetime and one of the deepest at Nazareth in 100 years.
 \vs p123 4:2 The play life of Jewish children in the times of Jesus was rather circumscribed; all too often the children played at the more serious things they observed their elders doing. They played much at weddings and funerals, ceremonies which they so frequently saw and which were so spectacular. They danced and sang but had few organized games, such as children of later days so much enjoy.
 \vs p123 4:3 Jesus, in company with a neighbour boy and later his brother James, delighted to play in the far corner of the family carpenter shop, where they had great fun with the shavings and the blocks of wood. It was always difficult for Jesus to comprehend the harm of certain sorts of play which were forbidden on the Sabbath, but he never failed to conform to his parents’ wishes. He had a capacity for humour and play which was afforded little opportunity for expression in the environment of his day and generation, but up to the age of 14 he was cheerful and light\hyp{}hearted most of the time.
-\vs p123 4:4 Mary maintained a dovecote on top of the animal house adjoining the home, and they used the profits from the sale of doves as a special charity fund, which Jesus administered after he deducted the tithe and turned it over to the officer of the synagogue.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jesus-Fall.png}\caption{Jesus falling down the steps by Slawa~Radziszewska}\end{figure}}
+\vs p123 4:4 Mary maintained a dovecote on top of the animal house adjoining the home, and they used the profits from the sale of doves as a special charity fund, which Jesus administered after he deducted the tithe and turned it over to the officer of the synagogue.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=0.9\columnwidth]{images/Jesus-Fall.png}\caption{Jesus falling down the steps by Slawa~Radziszewska}\end{figure}}
 \vs p123 4:5 \pc The only real accident Jesus had up to this time was a fall down the back\hyp{}yard stone stairs which led up to the canvas\hyp{}roofed bedroom. It happened during an unexpected July sandstorm from the east. The hot winds, carrying blasts of fine sand, usually blew during the rainy season, especially in March and April. It was extraordinary to have such a storm in July. When the storm came up, Jesus was on the housetop playing, as was his habit, for during much of the dry season this was his accustomed playroom. He was blinded by the sand when descending the stairs and fell. After this accident Joseph built a balustrade up both sides of the stairway.
 \vs p123 4:6 There was no way in which this accident could have been prevented. It was not chargeable to neglect by the midway temporal guardians, one primary and one secondary midwayer having been assigned to the watchcare of the lad; neither was it chargeable to the guardian seraphim. It simply could not have been avoided. But this slight accident, occurring while Joseph was absent in Endor, caused such great anxiety to develop in Mary’s mind that she unwisely tried to keep Jesus very close to her side for some months.
 \vs p123 4:7 Material accidents, commonplace occurrences of a physical nature, are not arbitrarily interfered with by celestial personalities. Under ordinary circumstances only midway creatures can intervene in material conditions to safeguard the persons of men and women of destiny, and even in special situations these beings can so act only in obedience to the specific mandates of their superiors.
