--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -747,7 +747,7 @@
 }
 
 \tunemarkup{pgkoboaurahd}{%
-\tolerance=9999
+\tolerance=3000
 \protected\def\print@vssup#1{\makebox[0.4em][l]{\@textsuperscript{\fontsize{7}{7}\bfseries#1}}\kern0.3em\relax}
 \setcounter{DefaultLines}{2}
 \renewcommand{\numw}{0.07\linewidth}
@@ -768,17 +768,17 @@
 \definecolor{ubred}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubfblue}{rgb}{0.0, 0.0, 0.0}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge ahb}}
-\newcommand{\subfont}{\fontsize{11}{13}\itshape}
-\newcommand{\parttitlefontsize}{\normalsize}
+\newcommand{\subfont}{\fontsize{13}{17}\itshape}
+\newcommand{\parttitlefontsize}{\Large}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{11}{11}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{7.7}{14}\selectfont}
 \newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{9}{9}\selectfont}
 \setlength{\minitocafterskip}{-0.5ex}
 \newcommand{\bibbookend}{\fontsize{16}{18}\selectfont}
 \newcommand{\urantiamainfontsize}{16/18}
-\renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{13}{15}\selectfont}
-\renewcommand{\bibfnchapsize}{\headerfont\large\bfseries}
-\renewcommand{\bibfnvssize}{\headerfont\normalsize\bfseries}
+\renewcommand{\footnotesize}{\fontsize{13}{15}\selectfont}
+\renewcommand{\bibfnchapsize}{\headerfont\normalsize\bfseries}
+\renewcommand{\bibfnvssize}{\headerfont\small\bfseries}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{22}{9}\bfseries\itshape}%
 }
 
